<resources>
    <string name="app_name">JoeClock</string>
    <string name="action_settings">Settings</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_start">Start</string>
    <string name="text_delema">:</string>
    <string name="btn_add">Add Alarm</string>
    <string name="btn_lap">lap</string>
</resources>
